# libfat

./: .gitignore  CMakeLists.txt
source/: disc.h  libfat.c
wiiu/: Makefile
